Mailing fix + contact form + Availability of an article + quantity drop when purchasing

--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -1,6 +1,6 @@
 {% extends 'baseAdmin.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
+{% block title %}Admin Home{% endblock %}
 {% block stylesheets %}
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
