--- a/templates/article/panier.html.twig
+++ b/templates/article/panier.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Panier{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
