--- a/templates/home/editlogin.html.twig
+++ b/templates/home/editlogin.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CommerceController!{% endblock %}
+{% block title %}Edit Login{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
