--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Home{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
@@ -14,6 +14,11 @@
             </div>
         {% endfor %}
         {% for message in app.session.flashbag.get('logged') %}
+            <div class="alert alert-info">
+                {{ message }}
+            </div>
+        {% endfor %}
+        {% for message in app.session.flashbag.get('MessageSuccess') %}
             <div class="alert alert-info">
                 {{ message }}
             </div>
@@ -50,12 +55,25 @@
                                         <h4 class="card-title">
                                             <a href="#">{{ article.nom }}</a>
                                         </h4>
+                                        {% if article.quantite == 0 %}
+                                        <span style="display: inline-block;
+    font-size: 14px;
+    font-weight: 500;
+    color: red;">Sold Out</span>
+                                        {% endif %}
                                         <h5>{{ article.prix }} $</h5>
                                         <p class="card-text">{{ article.description }}</p>
+                                        {% if article.quantite > 0 %}
                                         <a href="{{ path('panier_add', {id : article.id}) }}" class="btn btn-success float-right">
                                             <i class="fa fa-shopping-cart mr-1"></i>
                                             Ajouter
                                         </a>
+                                        {% else %}
+                                            <a href="{{ path('panier_add', {id : article.id}) }}" class="btn btn-success float-right disabled">
+                                                <i class="fa fa-shopping-cart mr-1"></i>
+                                                Ajouter
+                                            </a>
+                                            {% endif %}
                                     </div>
                                 </div>
                             </div>
@@ -64,6 +82,9 @@
                     {% else %}
                         <p>Aucun produit !</p>
                     {% endif %}
+                </div>
+                <div class="pagination">
+                    {{ knp_pagination_render(articles) }}
                 </div>
 
 
