--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -43,6 +43,7 @@
                             <input type="hidden" name="_csrf_token"
                                    value="{{ csrf_token('authenticate') }}"
                             >
+                            <a style="display: block;text-align: center;font-size: 16px;color: #6f7a85;opacity: 0.9;text-decoration: none;" class="forgot" href="{{ path('reset') }}">Forgot your password?</a>
                         </form>
                     </div>
                 </div>
