--- a/templates/home/account.html.twig
+++ b/templates/home/account.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CommerceController!{% endblock %}
+{% block title %}Profile{% endblock %}
 
 {% block stylesheets %}
 {{ parent() }}
