--- a/templates/payment/payment.html.twig
+++ b/templates/payment/payment.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PaymentController!{% endblock %}
+{% block title %}Payment{% endblock %}
 {% block stylesheets %}
 
     <style>
