--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+
+{% block title %}Registration{% endblock %}
+
 {% block stylesheets %}
     {{ parent() }}
 {% endblock %}
