--- a/templates/article/recherche.html.twig
+++ b/templates/article/recherche.html.twig
@@ -2,7 +2,8 @@
 
 {% block title %}Recherche{% endblock %}
 {% block stylesheets %}
-    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/home.css') }}">
+    <link href="https//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 {% endblock %}
 
 {% block body %}
@@ -26,38 +27,45 @@
 
             </div>
 
-            <div class="col-lg-7">
+            <div class="col-lg-9">
 
                 <hr>
-
-
                 <div class="row">
                     {% if resultat | length > 0 %}
-                    {% for resultat in resultat %}
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card h-100">
-                                <a href="{{ path('article', {id : resultat.id}) }}"><img class="card-img-top" src="uploads/{{ resultat.image }}" alt=""></a>
-                                <div class="card-body">
-                                    <h4 class="card-title">
-                                        <a href="#">{{ resultat.nom }}</a>
-                                    </h4>
-                                    {% if resultat.quantite == 0 %}
-                                        <span style="display: inline-block;
+                        {% for resultat in resultat %}
+                            <div class="col-md-4">
+                                <figure class="card card-product">
+                                    <div class="img-wrap"><a href="{{ path('article', {id : resultat.id}) }}"><img src="uploads/{{ resultat.image }}"></a></div>
+                                    <figcaption class="info-wrap">
+                                        <h4 class="title"><a href="{{ path('article', {id : resultat.id}) }}">{{ resultat.nom }}</a></h4>
+                                        {% if resultat.quantite == 0 %}
+                                            <span style="display: inline-block;
     font-size: 14px;
     font-weight: 500;
     color: red;">Sold Out</span>
-                                    {% endif %}
-                                    <h5>{{ resultat.prix }} $</h5>
-                                    <p class="card-text">{{ resultat.description }}</p>
-                                    <a href="{{ path('panier_add', {id : resultat.id}) }}" class="btn btn-success float-right">
-                                        <i class="fa fa-shopping-cart mr-1"></i>
-                                        Ajouter
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
+                                        {% else %}
+                                            <span style="display: inline-block;
+    font-size: 14px;
+    font-weight: 500;
+    color: #44a038;"
+                                            >In Stock</span>
+                                        {% endif %}
+                                        <p class="desc">{{ resultat.description }}</p>
+                                    </figcaption>
+                                    <div class="bottom-wrap">
+                                        {% if resultat.quantite > 0 %}
+                                            <a href="{{ path('panier_add', {id : resultat.id}) }}" class="btn btn-sm btn-primary float-right">Order Now</a>
+                                        {% else %}
+                                            <a href="{{ path('panier_add', {id : resultat.id}) }}" class="btn btn-sm btn-primary float-right disabled">Order Now</a>
+                                        {% endif %}
+                                        <div class="price-wrap h5">
+                                            <span class="price-new">{{ resultat.prix }} $</span>
+                                        </div> <!-- price-wrap.// -->
+                                    </div> <!-- bottom-wrap.// -->
+                                </figure>
+                            </div> <!-- col // -->
 
-                    {% endfor %}
+                        {% endfor %}
                     {% else %}
                         {% for message in app.session.flashbag.get('error') %}
                             <div class="alert alert-info">
@@ -65,10 +73,10 @@
                             </div>
                         {% endfor %}
                     {% endif %}
-
                 </div>
-
-
+                <div class="pagination">
+                    {{ knp_pagination_render(resultat) }}
+                </div>
             </div>
 
         </div>
