many to many added + fix orders

--- a/templates/home/account.html.twig
+++ b/templates/home/account.html.twig
@@ -3,7 +3,6 @@
 {% block title %}Profile{% endblock %}
 
 {% block stylesheets %}
-{{ parent() }}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 {% endblock %}
 
@@ -13,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 ">
-                <div class="list-group ">
+                <div class="list-group">
                     <a href="#profile" data-toggle="tab" class="list-group-item list-group-item-action active">Profile</a>
                     <a href="#login" data-toggle="tab" class="list-group-item list-group-item-action">Login Information</a>
                     <a href="#order" data-toggle="tab" class="list-group-item list-group-item-action">My Orders</a>
@@ -151,7 +150,7 @@
                                             <thead>
                                             <tr>
                                                 <th>Id</th>
-                                                <th>Description</th>
+                                                <th>Articles</th>
                                                 <th>Status</th>
                                                 <th>Order Date</th>
                                                 <th>Order Total</th>
@@ -161,7 +160,11 @@
                                             {% for commande in commandes %}
                                                 <tr>
                                                     <td>{{ commande.id }}</td>
-                                                    <td>{{ commande.description }}</td>
+                                                    <td>
+                                                        {% for detail in details %}
+                                                        {{ detail.articles.nom }},
+                                                        {% endfor %}
+                                                    </td>
                                                     <td>{{ commande.status }}</td>
                                                     <td>{{ commande.orderDate|date("d/m/Y") }}</td>
                                                     <td>{{ commande.orderTotal }} $</td>
@@ -196,7 +199,6 @@
 {% endblock %}
 
 {% block javascripts %}
-    {{ parent() }}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 {% endblock %}
