--- a/templates/article/informatique.html.twig
+++ b/templates/article/informatique.html.twig
@@ -68,10 +68,9 @@
                         <p>Aucun produit !</p>
                     {% endif %}
                 </div>
-                <div class="pagination">
+                <div class="pagination active">
                     {{ knp_pagination_render(articles) }}
                 </div>
-            </div>
 
         </div>
 
