--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,7 +7,7 @@
 
 {% block body %}
     {{ form_start(registrationForm) }}
-    <section class="login_box_area">
+    <section class="login_box_area section_gap">
         <div class="container">
             <div class="row" style="margin-left: 280px; width: 100%; ">
                 <div class="col-lg-6">
