--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -2,159 +2,180 @@
 
 {% block title %}Article Information{% endblock %}
 {% block stylesheets %}
-    {{ parent() }}
     <link href="{{ asset('css/shop-item.css') }}" rel="stylesheet">
-    <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
+{% endblock %}
+
+{% block route %}
+    Product Details
 {% endblock %}
 
 {% block body %}
 
-    {% for article in articles %}
-
-    <div class="container">
-        <section class="jumbotron">
+<div class="container">
+    <hr>
+        <div class="product_image_area">
             <div class="container">
-                <h1 class="jumbotron-heading">Categorie : {{ article.categorie }}</h1>
-            </div>
-        </section>
-        <div class="row">
-            <div class="col-12 col-lg-6">
-                <div class="card bg-light mb-3">
-                    <div class="card-body">
-                        <a href="" data-toggle="modal" data-target="#productModal">
-                            <img class="img-fluid" style="height: 500px; width: 500px;" src="/uploads/{{ article.image }}" alt="Image" />
-                            <p class="text-center">Zoom</p>
-                        </a>
+                <div class="row s_product_inner">
+                    <div class="col-lg-6">
+                            <div class="single-prd-item">
+                                <img style="width: 450px;height: 450px" class="img-fluid" src="/uploads/{{ article.image }}">
+                            </div>
+                    </div>
+                    <div class="col-lg-5 offset-lg-1">
+                        <form class="s_product_text" action="{{ path('panier_add', {id : article.id}) }}">
+                            <h3>{{ article.nom }}</h3>
+                            <h2>{{ article.prix }}$</h2>
+                            <ul class="list">
+                                <li><a class="active" href="#"><span>Category</span>: {{ article.categorie }}</a></li>
+                                {% if article.quantite > 0 %}
+                                    <li><a href="#"><span>Availibility</span><span style="display: inline-block;
+    font-size: 14px;
+    font-weight: 500;
+    color: #44a038;"> : In Stock</span></a></li>
+                                {% else %}
+                                    <li><a href="#"><span>Availibility</span><span style="display: inline-block;
+    font-size: 14px;
+    font-weight: 500;
+    color: red;"> : Sold Out</span></a></li>
+                                {% endif %}
+                            </ul>
+                            <p>Mill Oil is an innovative oil filled radiator with the most modern technology. If you are looking for
+                                something that can make your interior look awesome, and at the same time give you the pleasant warm feeling
+                                during the winter.</p>
+                            <div class="product_count">
+                                <label for="qty">Quantity:</label>
+                                <input type="number" name="quantity" id="quantity" min="1" max="{{ article.quantite }}" value="1" title="Quantity:" class="input-text qty">
+                            </div>
+                            <div class="card_area d-flex align-items-center">
+                                {% if article.quantite > 0 %}
+                                <button class="primary-btn" type="submit">Add To Cart</button>
+                                {% else %}
+                                    <button class="primary-btn" type="submit" disabled>Add To Cart</button>
+                                {% endif %}
+                            </div>
+                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <!--================End Single Product Area =================-->
 
-            <div class="col-12 col-lg-6 add_to_cart_block">
-                <div class="card bg-light mb-3">
-                    <div class="card-body">
-                        <p style="text-align: center;font-weight: bold;font-size: 200%;">{{ article.nom }}</p>
-                        <p class="price" style="color: #c01508; text-align: center;font-weight: bold;font-size: 150%; margin-bottom: 0;">{{ article.prix }} $</p>
-                        <div style="display: inline-block;
-    font-size: 14px;
-    font-weight: 500;
-    color: #6c6a74;">Availability:</div>
-                        {% if article.quantite > 0 %}
-                            <span style="display: inline-block;
-    font-size: 14px;
-    font-weight: 500;
-    color: #44a038;
-    margin-left: 5px;"
-                            >In Stock</span>
-                            {% else %}
-                                <span style="display: inline-block;
-    font-size: 14px;
-    font-weight: 500;
-    color: red;
-    margin-left: 5px;"
-                                >Sold Out</span>
-                        {% endif %}
-                        <form method="POST" action="{{ path('panier_add', {id : article.id}) }}" name="myForm">
-                            <div class="form-group">
-                                <label>Quantity :</label>
-                                <div class="input-group mb-3">
-                                    <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="{{ article.quantite }}" value="1">
+        <!--================Product Description Area =================-->
+        <section class="product_description_area">
+            <div class="container">
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Description</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" id="review-tab" data-toggle="tab" href="#review" role="tab" aria-controls="review"
+                           aria-selected="false">Reviews</a>
+                    </li>
+                </ul>
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
+                        <p>{{ article.description }}</p>
+                    </div>
+                    <div class="tab-pane fade show active" id="review" role="tabpanel" aria-labelledby="review-tab">
+                        <div class="row">
+                            <div class="col-lg-6">
+
+                                <div class="row total_rate">
+                                    <div class="col-6">
+                                        <div class="box_total">
+                                            <h5>Overall</h5>
+                                            <h4>4.0</h4>
+                                            <h6>({{ article.reviews| length }} Reviews)</h6>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="rating_list">
+                                            <h3>Based on {{ article.reviews| length }} Reviews</h3>
+                                            <ul class="list">
+                                                <li><a href="#">5 Star <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i
+                                                                class="fa fa-star"></i><i class="fa fa-star"></i> 01</a></li>
+                                                <li><a href="#">4 Star <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i
+                                                                class="fa fa-star"></i><i class="fa fa-star"></i> 01</a></li>
+                                                <li><a href="#">3 Star <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i
+                                                                class="fa fa-star"></i><i class="fa fa-star"></i> 01</a></li>
+                                                <li><a href="#">2 Star <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i
+                                                                class="fa fa-star"></i><i class="fa fa-star"></i> 01</a></li>
+                                                <li><a href="#">1 Star <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i
+                                                                class="fa fa-star"></i><i class="fa fa-star"></i> 01</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% for review in article.reviews %}
+
+                                <div class="review_list">
+                                    <div class="review_item">
+                                        <div class="media">
+
+
+                                            <div class="media-body">
+                                                <hr>
+                                                <h4>{{ review.username }}</h4>
+                                                <h5>{{ review.createdAt|date('Y-m-d H:i:s') }}</h5>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                                                    {% if review.username == app.user.loginName %}
+                                                        <a style="float: right;" href="{{ path('review_remove', {id : review.id}) }}" class="btn btn-danger btn-sm">
+                                                            <i class="fa fa-trash"></i>
+                                                        </a>
+                                                    {% endif %}
+                                                {% endif %}
+                                            </div>
+                                        </div>
+                                        <p>{{ review.content }}</p>
+
+
+                                    </div>
+
+                                </div>
+                                {% endfor %}
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="review_box">
+                                    <h4>Add a Review</h4>
+                                    <p>Your Rating:</p>
+                                    <ul class="list">
+                                        <li><a href="#"><i class="fa fa-star"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-star"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-star"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-star"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-star"></i></a></li>
+                                    </ul>
+                                    <p>Outstanding</p>
+                                    {{ form_start(reviews) }}
+                                    <br>
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                {{ form_row(reviews.content,  {'label' : false,'attr' : {'placeholder' : "Review",'class' : 'form-control'}}) }}
+                                            </div>
+                                        </div>
+                                        <div class="col-md-12 text-right">
+                                            <button type="submit" value="submit" class="primary-btn">Submit Now</button>
+                                        </div>
+                                    {{ form_end(reviews) }}
                                 </div>
                             </div>
-                            {% if article.quantite > 0 %}
-                            <button type="submit" class="btn btn-success btn-lg btn-block text-uppercase"><i class="fa fa-shopping-cart"></i> Add To Cart
-                            </button>
-                            {% else %}
-                                <button type="submit" class="btn btn-success btn-lg btn-block text-uppercase" disabled><i class="fa fa-shopping-cart"></i> Add To Cart
-                                </button>
-                                {% endif %}
-
-                        </form>
-                        <div class="reviews_product p-3 mb-2 ">
-                            {{ article.reviews | length }} reviews
-                            <a class="pull-right" href="#reviews">View all reviews</a>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="col-12">
-                <div class="card border-light mb-3">
-                    <div class="card-header bg-primary text-white text-uppercase"><i class="fa fa-align-justify"></i> Description</div>
-                    <div class="card-body">
-                        <p class="card-text">
-                            {{ article.description  }}
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12" id="reviews">
-                <div class="card border-light mb-3">
-                    <div class="card-header bg-primary text-white text-uppercase"><i class="fa fa-comment"></i> Reviews</div>
-                    <div class="card-body">
-    {% for review in article.reviews %}
-                        <div class="review">
-                            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-                            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                            {% if review.username == app.user.loginName %}
-                                <a style="float: right;" href="{{ path('review_remove', {id : review.id}) }}" class="btn btn-danger btn-sm">
-                                    <i class="fa fa-trash"></i>
-                                </a>
-                            {% endif %}
-                            {% endif %}
-                            <meta itemprop="datePublished" content="01-01-2016">{{ review.createdAt|date('Y-m-d H:i:s') }}
-                            by {{ review.username }}
-                            <p class="blockquote">
-                            <p class="mb-0">{{ review.content }}</p>
-                            <hr>
-                        </div>
-    {% endfor %}
-        {{ form_start(reviews) }}
-        {{ form_row(reviews.content,  {'label' : 'Review','attr' : {'placeholder' : "Review",'class' : 'form-control'}}) }}
-        <button type="submit" class="btn btn-success">Leave a Review</button>
-        {{ form_end(reviews) }}
-                    </div>
-                </div>
-            </div>
-        </div>
+        </section>
+        <!--================End Product Description Area =================-->
     </div>
-
-
-    <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="productModalLabel">{{ article.nom }}</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <img class="img-fluid" style="height: 500px; width: 500px;" src="/uploads/{{ article.image }}" alt="Image" />
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    {% endfor %}
-
-
-
-
 
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/jquery.min.js') }}"></script>
-    <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
-    <script src="{{ asset('js/shop.js') }}"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 {% endblock %}
