--- a/templates/home/account.html.twig
+++ b/templates/home/account.html.twig
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="tab-content" style="width: 800px;">
-            <div class="tab-pane" id="profile">
+            <div class="tab-pane active" id="profile">
             <div class="col-md-9">
                 <div class="card">
                     <div class="card-body">
