--- a/templates/article/gaming.html.twig
+++ b/templates/article/gaming.html.twig
@@ -2,11 +2,11 @@
 
 {% block title %}Gaming{% endblock %}
 {% block stylesheets %}
-    {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/home.css') }}">
-    <link href="https//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 {% endblock %}
-
+{% block route %}
+    Categorie : Gaming
+{% endblock %}
 {% block body %}
     <div class="container">
         <div class="bg-light p-3">
@@ -84,10 +84,4 @@
 
 
 
-{% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
-    <script src="{{ asset('js/jquery.min.js') }}"></script>
-    <script src="{{ asset('bootstrap/js/bootstrap.bundle.min.js') }}"></script>
 {% endblock %}
