--- a/templates/article/tv.html.twig
+++ b/templates/article/tv.html.twig
@@ -2,16 +2,14 @@
 
 {% block title %}TV{% endblock %}
 {% block stylesheets %}
-    {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/home.css') }}">
-    <link href="https//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+{% endblock %}
+{% block route %}
+    Categorie : TV | Photo & Son
 {% endblock %}
 
 {% block body %}
     <div class="container">
-        <div class="bg-light p-3">
-            <h1>Les produits TV</h1>
-        </div>
         <div class="row">
 
             <div class="col-lg-3">
@@ -86,8 +84,3 @@
 
 {% endblock %}
 
-{% block javascripts %}
-    {{ parent() }}
-    <script src="{{ asset('js/jquery.min.js') }}"></script>
-    <script src="{{ asset('bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-{% endblock %}
