--- a/templates/home/resetPassword.html.twig
+++ b/templates/home/resetPassword.html.twig
@@ -5,6 +5,9 @@
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/login.css') }}">
 {% endblock %}
+{% block route %}
+    Reset Password
+{% endblock %}
 
 {% block body %}
     {% for message in app.session.flashbag.get('emailSuccess') %}
