--- a/templates/home/contact.html.twig
+++ b/templates/home/contact.html.twig
@@ -2,8 +2,11 @@
 
 {% block Title %}Contact{% endblock %}
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ asset('/css/Contact-Form-Clean.css') }}" />
+{% endblock %}
+
+{% block route %}
+    Contact Us
 {% endblock %}
 
 {% block body %}
