--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -34,7 +34,7 @@
                 <div class="col-lg-6">
                     <div class="login_form_inner">
                         <h3>Log in to enter</h3>
-                        <form class="row login_form" action="{{ path('app_login') }}" method="post" id="contactForm" novalidate="novalidate">
+                        <form class="row login_form" action="{{ path('app_login') }}" method="post" id="contactForm">
                             <div class="col-md-12 form-group">
                                 <input type="email" class="form-control" id="inputEmail" name="email" placeholder="Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email'" value="{{ last_username }}" required autofocus>
                             </div>
