--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -118,8 +118,10 @@
 </section>
 <!-- End Banner Area -->
 <div class="container"></div>
+<hr>
 {% block body %}
 {% endblock %}
+<hr>
 <footer class="footer-area section_gap">
     <div class="container">
         <div class="row">
@@ -127,8 +129,7 @@
                 <div class="single-footer-widget">
                     <h6>About Us</h6>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore
-                        magna aliqua.
+                        Un site Ecommerce pour acheter des produit.
                     </p>
                 </div>
             </div>
