--- a/templates/home/resetPassword.html.twig
+++ b/templates/home/resetPassword.html.twig
@@ -31,7 +31,13 @@
                                 <input type="email" id="inputEmail" class="form-control" name="emailReset" placeholder="Email address" required autofocus>
                                 <label for="inputEmail">Email address</label>
                             </div>
-                            <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Submit</button>
+
+                            <button style="display: block;
+    border-radius: 0px;
+    line-height: 38px;
+    width: 100%;
+    text-transform: uppercase;
+    border: none;" type="submit" type="submit" value="submit" class="primary-btn">Submit</button>
                         </form>
                     </div>
                 </div>
