--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -35,5 +35,7 @@
         </tbody>
     </table>
     <a href="{{ path('user_new') }}" class="btn btn-primary">Create new</a>
-
+    <div class="pagination active">
+        {{ knp_pagination_render(articles) }}
+    </div>
 {% endblock %}
