--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -9,7 +9,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin - Blank Page</title>
+    <title>
+        {% block title %}
+
+        {% endblock %}
+    </title>
 
     <!-- Custom fonts for this template-->
     <link href="{{ asset('vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css">
@@ -19,6 +23,8 @@
 
     <!-- Custom styles for this template-->
     <link href="{{ asset('css/sb-admin.css') }}" rel="stylesheet">
+    {% block stylesheets %}
+    {% endblock %}
 
 
 
@@ -101,7 +107,7 @@
         <footer class="sticky-footer">
             <div class="container my-auto">
                 <div class="copyright text-center my-auto">
-                    <span>Copyright Â© Your Website 2019</span>
+                    <span>Copyright for Your Website 2019</span>
                 </div>
             </div>
         </footer>
@@ -145,7 +151,8 @@
 
 <!-- Custom scripts for all pages-->
 <script src="{{ asset('js/sb-admin.min.js') }}"></script>
-
+{% block javascripts %}
+{% endblock %}
 </body>
 
 </html>
